--- a/css/dark.css
+++ b/css/dark.css
@@ -1,1 +1,4 @@
-:root{--background-color: rgb(44, 44, 44);--color: rgb(223, 223, 223)}
+:root {
+  --background-color: rgb(44, 44, 44);
+  --color: rgb(223, 223, 223);
+}
