--- a/css/light.css
+++ b/css/light.css
@@ -1,1 +1,4 @@
-:root{--background-color: rgb(233, 233, 233);--color: rgb(44, 44, 44)}
+:root {
+  --background-color: rgb(233, 233, 233);
+  --color: rgb(44, 44, 44);
+}
