--- a/main.scss
+++ b/main.scss
@@ -6,6 +6,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 400ms all ease-in;
 }
 
 h1 {
@@ -20,11 +21,11 @@ h1 {
 
 @media (prefers-color-scheme: dark) {
   h1::after {
-    content: "Dark";
+    content: " Dark";
   }
 }
 @media (prefers-color-scheme: light) {
   h1::after {
-    content: "Light";
+    content: " Light";
   }
 }
